--- a/css/demo.css
+++ b/css/demo.css
@@ -42,9 +42,14 @@ footer {
 }
 /* demo page styles : intro */
 .intro {
-  background: #111 url('../img/intro.jpg') no-repeat 50% 50%;
+  background-color: #111;
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  background-image: -webkit-linear-gradient(45deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../img/intro.jpg');
+  background-image: linear-gradient(45deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../img/intro.jpg');
   background-size: cover;
-  min-height: 350px;
+  padding-top: 100px;
+  min-height: 300px;
   width: 100%;
   position: relative;
   display: -webkit-box;
@@ -67,6 +72,9 @@ footer {
   -webkit-transition: all 0.5s ease;
   transition: all 0.5s ease;
   margin: 5px;
+}
+.intro .btn .fa {
+  color: #d60361;
 }
 .intro .btn:hover {
   background: #ffffff;
