--- a/css/demo.less
+++ b/css/demo.less
@@ -47,10 +47,14 @@
 
   /* demo page styles : intro */
   .intro{
-    background: #111 url('../img/intro.jpg') no-repeat 50% 50%;
+    background-color: #111;
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    background-image: linear-gradient(45deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../img/intro.jpg');
     background-size: cover;
 
-    min-height: 350px;
+    padding-top: 100px;
+    min-height: 300px;
     width: 100%;
     position: relative;
 
@@ -67,6 +71,10 @@
       padding: 7px 15px;
       transition: all 0.5s ease;
       margin: 5px;
+
+      .fa{
+        color: #d60361;
+      }
     }
 
     .btn:hover{
